src/snapshots/heave__tests__petstore@getInventory_200.hurl.snap
---
source: src/main.rs
input_file: src/snapshots/petstore/getInventory_200.hurl
---
GET {{ baseurl }}/store/inventory
Authorization: Bearer {{ authorization }}
Prefer: code=200

HTTP 200

[Asserts]
jsonpath "$" isCollection

