src/snapshots/heave__tests__petstore@getOrderById_200.hurl.snap
---
source: src/main.rs
input_file: src/snapshots/petstore/getOrderById_200.hurl
---
GET {{ baseurl }}/store/order/{{orderId}}
Authorization: Bearer {{ authorization }}
Prefer: code=200

HTTP 200

[Asserts]
jsonpath "$" isCollection
#jsonpath "$.complete" isBoolean
#jsonpath "$.id" isInteger
#jsonpath "$.petId" isInteger
#jsonpath "$.quantity" isInteger
#jsonpath "$.shipDate" isString
#jsonpath "$.status" isString
