src/snapshots/heave__tests__petstore@getUserByName_200.hurl.snap
---
source: src/main.rs
input_file: src/snapshots/petstore/getUserByName_200.hurl
---
GET {{ baseurl }}/user/{{username}}
Authorization: Bearer {{ authorization }}
Prefer: code=200

HTTP 200

[Asserts]
jsonpath "$" isCollection
#jsonpath "$.email" isString
#jsonpath "$.firstName" isString
#jsonpath "$.id" isInteger
#jsonpath "$.lastName" isString
#jsonpath "$.password" isString
#jsonpath "$.phone" isString
#jsonpath "$.userStatus" isInteger
#jsonpath "$.username" isString
