src/snapshots/heave__tests__petstore@listPets_200.hurl.snap
---
source: src/main.rs
input_file: src/snapshots/petstore/listPets_200.hurl
---
GET {{ baseurl }}/pets
Authorization: Bearer {{ authorization }}
Prefer: code=200

[QueryStringParams]
limit: 

HTTP 200

[Asserts]
jsonpath "$" isCollection


