src/snapshots/heave__tests__petstore@placeOrder_200.hurl.snap
---
source: src/main.rs
input_file: src/snapshots/petstore/placeOrder_200.hurl
---
POST {{ baseurl }}/store/order
Authorization: Bearer {{ authorization }}
Prefer: code=200
{
  "complete": false,
  "id": 0,
  "petId": 0,
  "quantity": 0,
  "shipDate": "",
  "status": ""
}
HTTP 200

[Asserts]
jsonpath "$" isCollection
#jsonpath "$.complete" isBoolean
#jsonpath "$.id" isInteger
#jsonpath "$.petId" isInteger
#jsonpath "$.quantity" isInteger
#jsonpath "$.shipDate" isString
#jsonpath "$.status" isString
