src/snapshots/heave__tests__petstore@showPetById_200.hurl.snap
---
source: src/main.rs
input_file: src/snapshots/petstore/showPetById_200.hurl
---
GET {{ baseurl }}/pets/{{petId}}
Authorization: Bearer {{ authorization }}
Prefer: code=200

HTTP 200

[Asserts]
jsonpath "$" isCollection
jsonpath "$.id" isInteger
jsonpath "$.name" isString
jsonpath "$.tag" isString


