src/snapshots/heave__tests__petstore@uploadFile_200.hurl.snap
---
source: src/main.rs
input_file: src/snapshots/petstore/uploadFile_200.hurl
---
POST {{ baseurl }}/pet/{{petId}}/uploadImage
Authorization: Bearer {{ authorization }}
Prefer: code=200

[QueryStringParams]
additionalMetadata:


HTTP 200

[Asserts]
jsonpath "$" isCollection
#jsonpath "$.code" isInteger
#jsonpath "$.message" isString
#jsonpath "$.type" isString
